--- a/Views/Invoice/InvoicePrint.cshtml
+++ b/Views/Invoice/InvoicePrint.cshtml
@@ -32,25 +32,31 @@
 
         .wrapper {
             flex: 1;
-            padding: 10px; /* Add padding to give space around the table */
+            padding: 10px; 
         }
 
         .invoice {
-            width: 100%; /* Full-width for A4 */
+            width: 100%; 
             background: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             margin: 0 auto;
         }
 
         .table {
-            width: 100%; /* Ensure table spans full width */
-            table-layout: auto; /* Allow columns to adjust automatically */
+            width: 100%; 
+            table-layout: auto; 
         }
 
             .table thead th, .table tbody td {
                 padding: 10px;
-                border: 1px solid #ddd; /* Optional: Add table borders */
+                /* border: 1px solid #ddd;  */
             }
+
+        .signature-container {
+            width: 200px;
+            margin-left: auto;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -61,7 +67,7 @@
     <br />
     <div class="wrapper">
         <section class="invoice">
-            <!-- Title row -->
+            
             <div class="row">
                 <div class="col-12">
                     <h2 class="page-header">
@@ -70,7 +76,7 @@
                 </div>
             </div>
             <br />
-            <!-- Info row -->
+            
             <div class="row invoice-info mb-4">
                 <div class="col-sm-4 invoice-col">
                     From
@@ -120,16 +126,48 @@
                             }
                         </tbody>
                     </table>
-                    <div class="grand-total">
-                        <strong>Manual Discount:</strong> @Model.ManualDiscount ৳ <br />
-                        <strong>Grand Total:</strong> @Model.grandTotal<br />
-                        <strong>Total Paid:</strong> @Model.Paid
-                        <strong>Due(Ammount):</strong> @Model.Due<br />
-                        <strong>Payment Method:</strong> @Model.PaymentMethod<br />
+                    <div class="row">
+                        <div class="col-6 p-5">
+                            <p class="lead">Payment Methods:</p>
+                            <p>@Model.PaymentMethod</p>
+                            <p class="text-muted well well-sm shadow-none" style="margin-top: 10px;">
+                                Thank you for doing business with us.
+                            </p>
+                        </div>
+                        <div class="col-6 grand-total p-5">
+
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <th style="width:50%">Total Discount:</th>
+                                            <td> @Model.Total_Discount @Invoice.Helper.DiscountType.Ammount</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Total Ammount:</th>
+                                            <td>@Model.grandTotal</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Total Paid:</th>
+                                            <td>@Model.Paid</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Due Ammount:</th>
+                                            <td>@Model.Due</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <div class="signature-section col-3 float-right text-center">
+                <div class="signature-line"></div>
+                <hr />
+                <div>Signature</div>
+        </div>
     </div>
 
     <footer class="border-top footer text-muted text-center">
