--- a/Views/Invoice/InvoicePrint.cshtml
+++ b/Views/Invoice/InvoicePrint.cshtml
@@ -81,7 +81,7 @@
                 <div class="col-sm-4 invoice-col">
                     From
                     <address>
-                        Company<br />
+                        Invoice.Helper.CompanyAddress.Company<br />
                         @Invoice.Helper.CompanyAddress.Address<br>
                         @Invoice.Helper.CompanyAddress.Phone<br>
                         @Invoice.Helper.CompanyAddress.Email
@@ -90,7 +90,7 @@
                 <div class="col-sm-4 invoice-col">
                     To
                     <address>
-                        <strong>@Model.Name</strong><br>
+                       Name: <strong>@Model.Name</strong><br>
                        Address: @Model.Address<br>
                        Phone: @Model.Phone<br />
                     </address>
@@ -128,8 +128,37 @@
                     </table>
                     <div class="row">
                         <div class="col-6 p-5">
-                            <p class="lead">Payment Methods:</p>
-                            <p>@Model.PaymentMethod</p>
+                            <p class="lead">Payment Methods : <strong> @Model.PaymentMethod </strong></p>
+                            
+                            @{
+                                @switch (Model.PaymentMethod)
+                                {
+                                    case @Invoice.Helper.Payment.Bkash:
+                                        <img src="~/img/mfs/bkash.png" />
+                                        break;
+
+                                    case @Invoice.Helper.Payment.Nogod:
+                                        <img src="~/img/mfs/nagad.png" />
+                                        break;
+
+                                    case @Invoice.Helper.Payment.Rocket:
+                                        <img src="~/img/mfs/rocket.png" />
+                                        break;
+
+                                    case @Invoice.Helper.Payment.Cash:
+                                        <img src="~/img/mfs/cash.png" />
+                                        break;
+
+                                    default:
+                                        <img src="~/img/mfs/default.png" /> 
+                                        break;
+                                }
+
+                            }
+                           
+                            
+                            
+                            
                             <p class="text-muted well well-sm shadow-none" style="margin-top: 10px;">
                                 Thank you for doing business with us.
                             </p>
