--- a/Views/Invoice/InvoicePrint.cshtml
+++ b/Views/Invoice/InvoicePrint.cshtml
@@ -81,7 +81,7 @@
                 <div class="col-sm-4 invoice-col">
                     From
                     <address>
-                        Invoice.Helper.CompanyAddress.Company<br />
+                        @Invoice.Helper.CompanyAddress.Company<br />
                         @Invoice.Helper.CompanyAddress.Address<br>
                         @Invoice.Helper.CompanyAddress.Phone<br>
                         @Invoice.Helper.CompanyAddress.Email
@@ -90,7 +90,7 @@
                 <div class="col-sm-4 invoice-col">
                     To
                     <address>
-                       Name: <strong>@Model.Name</strong><br>
+                       Name: @Model.Name<br>
                        Address: @Model.Address<br>
                        Phone: @Model.Phone<br />
                     </address>
@@ -119,16 +119,16 @@
                                 <tr>
                                     <td class="col-5">@item.Description</td>
                                     <td class="col-1 text-end">@item.Quantity</td>
-                                    <td class="col-2 text-end">@item.Price</td>
+                                    <td class="col-2 text-end">@item.Price @Invoice.Helper.DiscountType.Currency</td>
                                     <td class="col-2 text-end">@item.ItemDiscount @item.discountType</td>
-                                    <td class="col-2 text-end">@item.TotalPrice</td>
+                                    <td class="col-2 text-end">@item.TotalPrice @Invoice.Helper.DiscountType.Currency</td>
                                 </tr>
                             }
                         </tbody>
                     </table>
                     <div class="row">
                         <div class="col-6 p-5">
-                            <p class="lead">Payment Methods : <strong> @Model.PaymentMethod </strong></p>
+                            <p class="lead">Payment Method: <strong> @Model.PaymentMethod </strong></p>
                             
                             @{
                                 @switch (Model.PaymentMethod)
@@ -147,6 +147,10 @@
 
                                     case @Invoice.Helper.Payment.Cash:
                                         <img src="~/img/mfs/cash.png" />
+                                        break;
+
+                                    case @Invoice.Helper.Payment.BankCard:
+                                        <img src="~/img/mfs/bank.png" />
                                         break;
 
                                     default:
@@ -170,19 +174,19 @@
                                     <tbody>
                                         <tr>
                                             <th style="width:50%">Total Discount:</th>
-                                            <td> @Model.Total_Discount @Invoice.Helper.DiscountType.Ammount</td>
+                                            <td> @Model.Total_Discount @Invoice.Helper.DiscountType.Currency</td>
                                         </tr>
                                         <tr>
                                             <th>Total Ammount:</th>
-                                            <td>@Model.grandTotal</td>
+                                            <td>@Model.grandTotal @Invoice.Helper.DiscountType.Currency</td>
                                         </tr>
                                         <tr>
                                             <th>Total Paid:</th>
-                                            <td>@Model.Paid</td>
+                                            <td>@Model.Paid @Invoice.Helper.DiscountType.Currency</td>
                                         </tr>
                                         <tr>
                                             <th>Due Ammount:</th>
-                                            <td>@Model.Due</td>
+                                            <td>@Model.Due @Invoice.Helper.DiscountType.Currency</td>
                                         </tr>
                                     </tbody>
                                 </table>
